# lama_polygon_matcher

csm_ros/: .gitignore  CMakeLists.txt  README.md  package.xml
csm_ros/csm/sm/csm/icp/: icp_loop.c
lama_msgs/: CMakeLists.txt  package.xml
place_matcher_csm/: CMakeLists.txt  package.xml
place_matcher_csm/include/place_matcher_csm/: dissimilarity_getter.h
place_matcher_csm/src/: place_matcher_csm_node.cpp
place_matcher_csm/src/place_matcher_csm/: dissimilarity_getter.cpp
place_matcher_csm/test/: utest-logging.conf  utest.cpp  utest.test
place_matcher_fourier/: CHANGELOG.rst  CMakeLists.txt  package.xml
place_matcher_fourier/include/pm_fourier/: fourier.h  fourier_dist.h
place_matcher_fourier/scripts/: runImageDataset-integralInvariant.pl  runmultiple.pl
place_matcher_fourier/src/: fourier.cpp
place_matcher_fourier/tests/: test.cpp  utils.cpp  utils.h
place_matcher_hist/: CMakeLists.txt  package.xml
place_matcher_hist/include/place_matcher_hist/: dissimilarity_getter.h  hist.h
place_matcher_hist/src/: hist.cc  place_matcher_hist_server.cpp
place_matcher_hist/src/place_matcher_hist/: dissimilarity_getter.cpp
place_matcher_hist/test/: utest.cpp  utest.test
place_matcher_mcc/: CHANGELOG.rst  CMakeLists.txt  package.xml
place_matcher_mcc/include/place_matcher_mcc/: dissimilarity_getter.h  jockey.h
place_matcher_mcc/src/: place_matcher_mcc_jockey.cpp  place_matcher_mcc_node.cpp
place_matcher_mcc/src/place_matcher_mcc/: dissimilarity_getter.cpp  jockey.cpp
place_matcher_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
place_matcher_msgs/src/: simple_dissimilarity_server_node.cpp
place_matcher_msgs/srv/: GetCapability.srv  PolygonDissimilarity.srv
pm_fourier/: CMakeLists.txt  package.xml
pm_fourier/include/pm_fourier/: angle_shift.h  fourier.h  fourier_dist.h  resample.h  spoint.h
pm_fourier/scripts/: processAll.pl  processResults.pl  runFourierPolygonDataset.pl  runmultiple_freq.pl
pm_fourier/src/: angle_shift.cpp  fourier.cpp  fourier_dist.cpp  fourier_pm_test.cc  pm_fourier_node.cpp
pm_fourier/tests/: test.cpp
pm_mcc/: CHANGELOG.rst  CMakeLists.txt  package.xml
pm_mcc/include/pm_mcc/: dissimilarity_getter.h
pm_mcc/src/: pm_mcc_node.cpp
pm_mcc/src/pm_mcc/: dissimilarity_getter.cpp
polygon_matcher/: CHANGELOG.rst  CMakeLists.txt  package.xml
polygon_matcher/src/: simple_dissimilarity_server_node.cpp  simple_similarity_server_node.cpp
polygon_matcher/srv/: PolygonDissimilarity.srv  PolygonSimilarity.srv
