<?xml version="1.0"?>
<package>
  <name>place_matcher_fourier</name>
  <version>0.1.1</version>
  <description>Provides a place matcher based on FFT</description>

  <maintainer email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</maintainer>


  <license>BSD</license>


  <url type="website">http://wiki.ros.org/pm_fourier</url>
  <url type="repository">https://github.com/lama-imr/lama_polygon_matcher.git</url>
  <url type="bugtracker">https://github.com/lama-imr/lama_polygon_matcher/issues</url>


  <author email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</author>
  <author email="kosnar@labe.felk.cvut.cz">Karel Košnar</author>
  <author email="vonasek@labe.felk.cvut.cz">Vojtěch Vonásek</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>lama_common</build_depend>
  <build_depend>libgsl</build_depend>
  <build_depend>place_matcher_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>libgsl</run_depend>
  <run_depend>lama_common</run_depend>
  <run_depend>place_matcher_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>


  <export>
  </export>
</package>
