<?xml version="1.0"?>
<package>
  <name>place_matcher_mcc</name>
  <version>0.1.1</version>
  <description>Provides a place matcher based on the Multi-scale Convexity
	  Concavity (MCC) representation. Based on article Adamek, T. and O'Connor, N.E.,
	  A multiscale representation method for nonrigid shapes with a single
	  closed contour, in IEEE Transactions on Circuits and Systems for Video
	  Technology, 2004.
  </description>

  <maintainer email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</maintainer>


  <license>TODO</license>


  <url type="website">http://wiki.ros.org/place_matcher_mcc</url>
  <url type="repository">https://github.com/lama-imr/lama_polygon_matcher.git</url>
  <url type="bugtracker">https://github.com/lama-imr/lama_polygon_matcher/issues</url>


  <author email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</author>
  <author email="kosnar@labe.felk.cvut.cz">Karel Košnar</author>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>lama_common</build_depend>
  <build_depend>lama_interfaces</build_depend>
  <build_depend>lama_jockeys</build_depend>
  <build_depend>place_matcher_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>lama_common</run_depend>
  <run_depend>lama_interfaces</run_depend>
  <run_depend>lama_jockeys</run_depend>
  <run_depend>place_matcher_msgs</run_depend>


  <export>
  </export>
</package>
