<?xml version="1.0"?>
<package>
  <name>polygon_matcher</name>
  <version>0.1.1</version>
  <description>The polygon_matcher package</description>

  <maintainer email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</maintainer>


  <license>BSD</license>


  <url type="website">http://wiki.ros.org/polygon_matcher</url>
  <url type="repository">https://github.com/lama-imr/lama_polygon_matcher.git</url>
  <url type="bugtracker">https://github.com/lama-imr/lama_polygon_matcher/issues</url>


  <author email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</author>
  <author email="kosnar@labe.felk.cvut.cz">Karel Košnar</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>lama_interfaces</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>lama_interfaces</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>


  <export>
  </export>
</package>
